Fix links overflowing

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -15,3 +15,7 @@ footer img {
   width: 16px;
   height: 16px;
 }
+
+.overflow-hidden {
+  overflow: hidden;
+}
